<resources>
    <string name="app_name">CustomCalculatorFinal</string>
    <string name="price">Price (BYN): </string>
    <string name="less_1000">Not more than 1000 cm³</string>
    <string name="between_1000_and_2000">Between 1000 cm³ and 2000 cm³</string>
    <string name="between_2000_and_3000">Between 2000 cm³ and 3000 cm³</string>
    <string name="between_3000_and_3500">Between 3000 cm³ and 3500 cm³</string>
    <string name="more_3500">More than 3500 cm³</string>
    <string name="where">Where</string>
    <string name="who">Who</string>
    <string name="age">Age</string>
    <string name="type">Engine\'s type</string>
    <string name="volume">Engine\'s volume</string>
    <string name="eeu">EEU</string>
    <string name="another">Another</string>
    <string name="natural_person">Natural person</string>
    <string name="juridical_person">Juridical person</string>
    <string name="electric">Electric</string>
    <string name="petrol">Petrol</string>
    <string name="less_3">Under 3 years old</string>
    <string name="between_3_and_7">Between 3 and 7 years old</string>
    <string name="over_7">Over 7 years old</string>
    <string name="m1">Passenger car (M1)</string>
    <string name="not_m1">Other car (except M1)</string>
    <string name="self_propelled">Self-propelled &amp; trailers</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_header">Recycling tax</string>
    <string name="navigation_title">Recycling tax</string>
    <string name="navigation_description">Fast. Easy. For free.</string>
    <string name="main">Tax calculator</string>
    <string name="contact_us">Write to us</string>
    <string name="contact_us_if_you">Contact us if you have good ideas and suggestions. You can also write to us if you need help in processing the recycling tax.</string>
    <string name="your_name">Your name</string>
    <string name="send">Send</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="subject_name"> - message from your wonderful application</string>
    <string name="choose_client_popup">Choose an Email client:</string>
    <string name="text">Text</string>

    <string name="n1">Vehicles type N1, N2, N3, including cross-country N1G, N2G, N3G, and special and specialized vehicles of this categories</string>
    <string name="m2">Vehicles type M2, M3, including cross-country M2G, M3G, and special and specialized vehicles</string>
    <string name="dump_trucks">Dump trucks for off-road operation</string>
    <string name="trailers">Trailers (semi-trailers) category O4, and special and specialized trailers (semi-trailers)</string>
    <string name="type_car">Vehicle type</string>
    <string name="weight_car">Weight</string>
    <string name="weight_less_2">Under 2.5 tons</string>
    <string name="weight_between_2.5_and_3.5">Between 2.5 and 3.5 tons</string>
    <string name="weight_between_3.5_and_5">Between 3.5 and 5 tons</string>
    <string name="weight_between_5_and_8">Between 5 and 8 tons</string>
    <string name="weight_between_8_and_12">Between 8 and 12 tons</string>
    <string name="weight_between_12_and_20">Between 12 and 20 tons</string>
    <string name="weight_between_20_and_30">Between 20 and 30 tons</string>
    <string name="weight_between_30_and_50">Between 30 and 50 tons</string>
    <string name="trucks_electro">With electric engines, excluding hybrid engines</string>
    <string name="trucks_petrol">With petrol engines, including hybrid engines</string>
    <string name="weight_between_50_80">Between 50 and 80 tons</string>
    <string name="weight_between_80_350">Between 80 and 350 tons</string>
    <string name="weight_more_350">Over 350 tons</string>
    <string name="trailers_more_10">Trailers with weight over 10 tons</string>
    <string name="half_trailers_more_10">Semi-trailers with weight over 10 tons</string>
    <string name="m2_not_more_2500">Under 2500 cm³</string>
    <string name="m2_between_2500_5000">Between 2500 cm³ and 5000 cm³</string>
    <string name="m2_between_5000_10000">Between 5000 cm³ and 10000 cm³</string>
    <string name="m2_more_10000">Over 10000 cm³</string>

    <string name="phone_us">Contact us</string>
    <string name="ccp_kolyadichi">CCP \"Kolyadichi-Avto\"</string>
    <string name="ccp_minsk_fez">CCP \"Minsk-FEZ\"</string>
    <string name="ccp_kulttorg">CCP \"Kulttorg\"</string>
    <string name="grodno_department">Grodno department</string>
    <string name="kolyadichi_description">Minsk city, Babushkina str. 39, office 413.\nSeven days a week, from 9:00 till 20:00, \nworkdays +375 29 122 81 12, \nweekends +375 44 731 61 00</string>
    <string name="build_a_route">To map</string>
    <string name="minsk_fez_description">Minsk city, Promyshlennaya str. 23, office 201.\nFrom monday till friday, 9:00–17:00, \n+375 44 580 82 88</string>
    <string name="kulttorg_description">Minsk city, Menkovski tract 8, office 209.\nFrom monday till friday, 9:00–17:00, \n+375 29 616 74 02</string>
    <string name="grodno_description">Grodno city, Puchkova street 28, first floor.\nFrom monday till friday, 9:00–18:00, \n+375 44 580 31 66</string>
    <string name="website">Website</string>
    <string name="we_will_open_it_soon">We will open it soon…</string>
    <string name="choose_navigations">"Choose a navigation application"</string>

    <!-- self-propelled cars and trailers -->
    <string name="graders" >Graders and planners</string>
    <string name="bulldozers" >Bulldozers</string>
    <string name="excavators" >Excavators, backhoe loaders, backhoe bulldozers</string>
    <string name="loaders" >Loaders</string>
    <string name="rammers" >Rammers and road rollers</string>
    <string name="forklifts" >Single-bucket frontal loaders, forklifts</string>
    <string name="wheeled_cranes" >Wheeled cranes, with the exception of cranes mounted on automobile chassis or trucks</string>
    <string name="pipelayers" >Pipelayers, crawler cranes</string>
    <string name="trailers_except_o4" >Trailers, with the exception of automobile trailers of category O4</string>
    <string name="road_maintenance_cars" >Road maintenance cars, with the exception of machines mounted on automobile chassis or trucks</string>
    <string name="forestry_cars" >Cars and equipment for forestry, with the exception of those installed on automobile chassis or trucks</string>
    <string name="forwarders" >Forwarders, with the exception of those installed on automobile chassis or trucks</string>
    <string name="timber_loaders" >Timber loaders front and skidders for forestry, with the exception of those mounted on automobile chassis or trucks</string>
    <string name="tractors_wheeled" >Tractors wheeled</string>
    <string name="crawler_tractors" >Crawler tractors</string>
    <string name="combine_harvesters" >Combine harvesters</string>
    <string name="forage_harvesters" >Forage harvesters with power plant capacity</string>
    <string name="agricultural_machines" >Agricultural machines: self-propelled mowers, self-propelled crop protection sprayers</string>
    <string name="dump_trucks_off_road" >Dump trucks designed for operation in off-road conditions</string>

    <!-- power of self-propelled cars -->
    <string name="power_of_car" >Choose power</string>
    <string name="power_less_100" >Less 100 hp</string>
    <string name="power_between_100_140" >Between 100 and 140 hp</string>
    <string name="power_between_140_200" >Between 140 and 200 hp</string>
    <string name="power_more_200" >200 and more hp</string>
    <string name="power_between_100_200" >Between 100 and 200 hp</string>
    <string name="power_between_200_300" >Between 200 and 300 hp</string>
    <string name="power_between_300_400" >Between 300 and 400 hp</string>
    <string name="power_more_400" >400 and more hp</string>
    <string name="power_less_170" >Less 170 hp</string>
    <string name="power_between_170_250" >Between 170 and 250 hp</string>
    <string name="power_more_250" >250 and more hp</string>
    <string name="power_between_100_125" >Between 100 and 125 hp</string>
    <string name="power_between_125_150" >Between 125 and 150 hp</string>
    <string name="power_more_150" >150 and more hp</string>
    <string name="power_less_40" >Less 40 hp</string>
    <string name="power_between_40_80" >Between 40 and 80 hp</string>
    <string name="power_more_80" >80 and more hp</string>
    <string name="power_between_5_5_50" >Between 5.5 and 50 hp</string>
    <string name="power_between_50_100" >Between 50 and 100 hp</string>
    <string name="power_between_200_250" >Between 200 and 250 hp</string>
    <string name="power_between_250_300" >Between 250 and 300 hp</string>
    <string name="power_less_130" >Less 130 hp</string>
    <string name="power_between_130_200" >Between 130 and 200 hp</string>
    <string name="power_more_300" >Power more 300 hp</string>
    <string name="capacity_for_trailers" >Choose trailer capacity</string>
    <string name="capacity_trailers_more_10" >Trailers capacity more than 10 tons</string>
    <string name="capacity_semitrailers_more_10" >Semi-trailers capacity more than 10 tons</string>
    <string name="power_between_100_220" >Between 100 and 220 hp</string>
    <string name="power_more_220" >220 and more hp</string>
    <string name="power_between_20_100" >Between 20 and 100 hp</string>
    <string name="power_between_100_300" >Between 100 and 300 hp</string>
    <string name="power_between_5_5_30" >Between 5.5 and 30 hp</string>
    <string name="power_between_30_60" >Between 30 and 60 hp</string>
    <string name="power_between_60_90" >Between 60 and 90 hp</string>
    <string name="power_between_90_130" >Between 90 and 130 hp</string>
    <string name="power_between_130_180" >Between 130 and 180 hp</string>
    <string name="power_between_180_220" >Between 180 and 220 hp</string>
    <string name="power_between_220_280" >Between 220 and 280 hp</string>
    <string name="power_between_280_340" >Between 280 and 340 hp</string>
    <string name="power_between_340_380" >Between 340 and 380 hp</string>
    <string name="power_more_380" >380 and more hp</string>
    <string name="power_between_25_160" >Between 25 and 160 hp</string>
    <string name="power_between_160_220" >Between 160 and 220 hp</string>
    <string name="power_between_220_255" >Between 220 and 255 hp</string>
    <string name="power_between_255_325" >Between 255 and 325 hp</string>
    <string name="power_between_325_400" >Between 325 and 400 hp</string>
    <string name="power_less_295" >Not more than 295 hp</string>
    <string name="power_between_295_401" >Between 295 and 401 hp</string>
    <string name="power_more_401" >More than 401 hp</string>
    <string name="power_between_100_120" >Between 100 and 120 hp</string>
    <string name="power_between_120_300" >Between 120 and 300 hp</string>
    <string name="self_propelled_mowers" >Self-propelled mowers</string>
    <string name="power_less_650" >Less than 650 hp</string>
    <string name="power_between_650_1750" >Between 650 and 1750 hp</string>
    <string name="power_more_1750" >Power 1750 and more hp</string>
    <string name="age_older_3" >Older 3 years old</string>
</resources>