<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/main" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_phones"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/phone_us" />

        <item
            android:id="@+id/nav_website"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/website" />
    </group>
</menu>